# test-ogre-conda-package

./: .gitignore  CMakeLists.txt  pixi.toml  vpConfig.h.in
.github/workflows/: macos-linux-windows-pixi.yml
cmake/: FindMyPanda3D.cmake  OgreTools.cmake
src/: main.cpp  vpAROgre.cpp  vpAROgre.h
